# keyway

./: .env.example  .gitignore  AGENTS.md  LICENSE  README-zh.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: multi-mode-processing-plan.md
src/keyway/: __init__.py  __main__.py  adapters.py  app.py  config.py  crypto.py  fusion.py  llm_keys.py  llm_protocol.py  llm_router.py  llm_store.py  llm_tools.py  modality.py  models.py
src/keyway/web/: admin.html  docs.html  index.html
src/keyway/web/assets/: admin.js
tests/: test_keyway.py
tutorial/: api-reference-zh.md  api-reference.md  architecture-zh.md  architecture.md  getting-started-zh.md  getting-started.md  multi-mode-processing-zh.md  multi-mode-processing.md  multi-provider-setup-zh.md  multi-provider-setup.md
